--- a/tienda.html
+++ b/tienda.html
@@ -3,208 +3,171 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tienda — Miranda Flow</title>
+<title>Shop | Miranda Flow</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;800&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-body{
-  font-family:'Inter',sans-serif;
-  background:#f7f6f3;
-  color:#000;
-}
+body{font-family:Inter,sans-serif;background:#fff;color:#111}
 
-/* ===== NAV ===== */
-nav{
+/* HEADER */
+header{
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:26px 36px;
+  padding:18px 40px;
+  border-bottom:1px solid #eee;
 }
-.brand{
-  display:flex;
-  align-items:center;
-  gap:14px;
-}
-.brand img{width:36px}
-.brand span{
-  font-family:'Playfair Display',serif;
-  font-size:22px;
-}
-.menu a{
-  margin-left:30px;
+header nav a{
+  margin:0 14px;
   text-decoration:none;
-  color:#000;
+  color:#111;
   font-size:14px;
 }
+.icons span{margin-left:14px;font-size:18px;cursor:pointer}
 
-/* ===== BACK ===== */
-.back{
-  margin:30px 36px;
-}
-.back a{
-  font-size:22px;
-  text-decoration:none;
-  color:#000;
-}
-
-/* ===== HEADER ===== */
-header{
-  padding:20px 36px 40px;
-}
-header h1{
-  font-family:'Playfair Display',serif;
-  font-size:56px;
-  margin-bottom:20px;
-}
-
-/* ===== FILTER ===== */
-.filters{
+/* HERO */
+.hero{
+  height:80vh;
+  background:url("portada.jpg") center/cover no-repeat;
+  position:relative;
   display:flex;
-  gap:16px;
+  align-items:center;
+  justify-content:center;
 }
-.filters button{
-  padding:12px 26px;
-  border-radius:40px;
-  border:1px solid #000;
-  background:transparent;
+.hero::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:rgba(0,0,0,.35);
+}
+.hero-content{
+  position:relative;
+  color:#fff;
+  text-align:center;
+}
+.hero-content h1{font-size:42px;margin-bottom:10px}
+.hero-content button{
+  margin-top:14px;
+  padding:14px 30px;
+  background:#fff;
+  border:none;
   cursor:pointer;
+  font-weight:500;
 }
-.filters button.active{
-  background:#000;
+
+/* DROP LINE */
+.drop{
+  display:flex;
+  justify-content:center;
+  gap:20px;
+  padding:14px;
+  font-size:12px;
+  background:#111;
   color:#fff;
 }
 
-/* ===== COLLECTIONS ===== */
-section{
-  padding:40px 36px;
+/* WELCOME */
+.welcome{
+  text-align:center;
+  padding:60px 20px;
 }
-.section-title{
-  font-family:'Playfair Display',serif;
-  font-size:36px;
+.welcome h2{font-size:26px;margin-bottom:10px}
+.welcome p{color:#666}
+
+/* PRODUCTS */
+.products{
+  padding:40px;
+}
+.products h3{
+  text-align:center;
   margin-bottom:30px;
 }
-
-/* ===== GRID ===== */
 .grid{
   display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:28px;
+  grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+  gap:30px;
 }
 .card{
-  background:#fff;
-  padding:22px;
-  border-radius:22px;
-  transition:.4s;
-}
-.card:hover{
-  transform:translateY(-6px);
-  box-shadow:0 25px 60px rgba(0,0,0,.12);
+  text-align:center;
 }
 .card img{
   width:100%;
-  border-radius:16px;
-  margin-bottom:18px;
+  border-radius:6px;
 }
-.card h3{
-  font-size:15px;
-  font-weight:500;
+.card h4{
+  margin-top:10px;
+  font-size:14px;
 }
 .card span{
   font-size:13px;
-  opacity:.6;
-}
-
-/* ===== RESPONSIVE ===== */
-@media(max-width:900px){
-  .grid{grid-template-columns:repeat(2,1fr)}
-}
-@media(max-width:500px){
-  .grid{grid-template-columns:1fr}
+  color:#666;
 }
 </style>
 </head>
 
 <body>
 
-<nav>
-  <div class="brand">
-    <img src="logo.jpg">
-    <span>Miranda Flow</span>
-  </div>
-  <div class="menu">
-    <a href="index.html">Inicio</a>
-    <a href="carrito.html">Carrito</a>
-  </div>
-</nav>
-
-<div class="back">
-  <a href="index.html">←</a>
-</div>
-
 <header>
-  <h1>Tienda</h1>
-  <div class="filters">
-    <button class="active">Hombre</button>
-    <button>Mujer</button>
-    <button>Unisex</button>
+  <strong>Miranda Flow</strong>
+  <nav>
+    <a href="#">Shop by</a>
+    <a href="#">Collections</a>
+    <a href="#">Our Story</a>
+    <a href="#">Size Guide</a>
+  </nav>
+  <div class="icons">
+    <span>🔍</span>
+    <span>🤍</span>
+    <span onclick="location.href='carrito.html'">🛒</span>
   </div>
 </header>
 
-<section>
-  <div class="section-title">Colecciones</div>
+<section class="hero">
+  <div class="hero-content">
+    <h1>New Collection</h1>
+    <p>Grab our iconic style today</p>
+    <button>Shop Now</button>
+  </div>
+</section>
+
+<div class="drop">
+  <span>New Drop Today</span>
+  <span>New Drop Today</span>
+  <span>New Drop Today</span>
+  <span>New Drop Today</span>
+</div>
+
+<section class="welcome">
+  <h2>Welcome to Miranda Flow</h2>
+  <p>Luxury streetwear crafted with intention.</p>
+</section>
+
+<section class="products">
+  <h3>Shop our Bestsellers</h3>
 
   <div class="grid">
-
     <div class="card">
-      <img src="hoodie1.jpg">
-      <h3>Hoodie Signature</h3>
-      <span>Edición limitada</span>
+      <img src="prod1.jpg">
+      <h4>Graphic T-Shirt</h4>
+      <span>$120.00</span>
     </div>
-
     <div class="card">
-      <img src="pants1.jpg">
-      <h3>Pantalón Corte Recto</h3>
-      <span>Premium denim</span>
+      <img src="prod2.jpg">
+      <h4>Classic Hoodie</h4>
+      <span>$180.00</span>
     </div>
-
     <div class="card">
-      <img src="pullover1.jpg">
-      <h3>Pullover Essential</h3>
-      <span>Algodón pesado</span>
+      <img src="prod3.jpg">
+      <h4>Essential Tee</h4>
+      <span>$95.00</span>
     </div>
-
     <div class="card">
-      <img src="short1.jpg">
-      <h3>Short Urbano</h3>
-      <span>Verano</span>
+      <img src="prod4.jpg">
+      <h4>Premium Set</h4>
+      <span>$240.00</span>
     </div>
-
-    <div class="card">
-      <img src="set1.jpg">
-      <h3>Conjunto Flow</h3>
-      <span>Statement piece</span>
-    </div>
-
-    <div class="card">
-      <img src="hoodie2.jpg">
-      <h3>Hoodie Raw</h3>
-      <span>Textura vintage</span>
-    </div>
-
-    <div class="card">
-      <img src="pants2.jpg">
-      <h3>Pantalón Relax</h3>
-      <span>Fit moderno</span>
-    </div>
-
-    <div class="card">
-      <img src="pullover2.jpg">
-      <h3>Pullover Heavy</h3>
-      <span>Invierno</span>
-    </div>
-
   </div>
 </section>
 
