--- a/prendas.html
+++ b/prendas.html
@@ -2,111 +2,159 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Prendas · Miranda Flow</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Prendas | Miranda Flow</title>
 
 <style>
+*{box-sizing:border-box}
 body{
   margin:0;
-  font-family: Arial, sans-serif;
   background:#000;
   color:#fff;
+  font-family:system-ui,-apple-system;
+  overflow-x:hidden;
 }
 
+/* ===== FONDO PREMIUM ANIMADO ===== */
+.bg{
+  position:fixed;
+  inset:0;
+  z-index:-1;
+}
+.bg img{
+  position:absolute;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  opacity:0;
+  animation:fade 18s infinite;
+}
+.bg img:nth-child(1){animation-delay:0s}
+.bg img:nth-child(2){animation-delay:6s}
+.bg img:nth-child(3){animation-delay:12s}
+
+@keyframes fade{
+  0%,20%{opacity:.35}
+  33%,100%{opacity:0}
+}
+
+/* ===== HEADER ===== */
 header{
-  padding:20px 28px;
+  padding:18px 22px;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  border-bottom:1px solid #111;
+  background:rgba(0,0,0,.55);
+  backdrop-filter:blur(10px);
+  position:sticky;
+  top:0;
+  z-index:10;
 }
-
 header a{
-  color:#fff;
+  color:#aaa;
   text-decoration:none;
   margin-left:18px;
   font-size:14px;
 }
 
-main{
-  max-width:1200px;
-  margin:60px auto;
-  padding:0 20px;
-}
-
+/* ===== TITULO ===== */
+main{padding:60px 20px}
 h1{
-  font-size:48px;
-  margin-bottom:10px;
+  font-size:42px;
+  margin:0 0 10px;
 }
-
-.sub{
+p{
   color:#aaa;
-  margin-bottom:40px;
-  max-width:500px;
+  max-width:520px;
+  line-height:1.5;
 }
 
-.filters{
+/* ===== CATEGORÍAS (SCROLL HORIZONTAL) ===== */
+.categories{
   display:flex;
-  gap:14px;
-  margin-bottom:40px;
+  gap:12px;
+  margin:40px 0;
+  overflow-x:auto;
+  padding-bottom:10px;
 }
+.categories::-webkit-scrollbar{display:none}
 
-.filter{
-  padding:10px 20px;
-  border:1px solid #333;
-  border-radius:30px;
-  font-size:13px;
+.cat{
+  padding:10px 18px;
+  border-radius:999px;
+  border:1px solid #222;
+  white-space:nowrap;
   cursor:pointer;
+  font-size:14px;
+  transition:.3s;
 }
-
-.filter.active{
+.cat.active,
+.cat:hover{
   background:#fff;
   color:#000;
 }
 
+/* ===== GRID DE PRENDAS ===== */
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
-  gap:24px;
+  grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
+  gap:20px;
 }
 
+/* ===== CARD PREMIUM ===== */
 .card{
-  background:#0b0b0b;
+  background:rgba(0,0,0,.6);
+  border:1px solid #1f1f1f;
   border-radius:18px;
-  padding:14px;
-  transition:.3s;
+  padding:26px;
+  cursor:pointer;
+  position:relative;
+  overflow:hidden;
+  opacity:0;
+  transform:translateY(20px);
+  animation:fadeUp .9s ease forwards;
+}
+.card:nth-child(1){animation-delay:.1s}
+.card:nth-child(2){animation-delay:.2s}
+.card:nth-child(3){animation-delay:.3s}
+.card:nth-child(4){animation-delay:.4s}
+
+@keyframes fadeUp{
+  to{opacity:1;transform:none}
 }
 
-.card:hover{
-  transform:translateY(-6px);
+.card::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:linear-gradient(120deg,transparent,rgba(255,255,255,.08),transparent);
+  opacity:0;
+  transition:.6s;
 }
+.card:hover::after{opacity:1}
 
-.card img{
-  width:100%;
-  border-radius:14px;
+.card h3{
+  margin:0 0 8px;
+  font-size:18px;
 }
-
-.name{
-  margin-top:14px;
+.card span{
+  color:#aaa;
   font-size:14px;
 }
 
-.price{
-  margin-top:6px;
-  font-size:13px;
-  color:#bbb;
-}
-
-footer{
-  text-align:center;
-  margin:80px 0 40px;
-  color:#666;
-  font-size:13px;
-}
+/* ===== OCULTAR POR CATEGORÍA ===== */
+.hidden{display:none}
 </style>
 </head>
 
 <body>
+
+<!-- FONDO -->
+<div class="bg">
+  <img src="fondo.jpg">
+  <img src="destacado.jpg">
+  <img src="detalle.jpg">
+</div>
 
 <header>
   <strong>Miranda Flow</strong>
@@ -119,50 +167,56 @@ footer{
 
 <main>
   <h1>Prendas</h1>
-  <p class="sub">
-    Piezas seleccionadas. Lujo real.  
-    Presencia que no se explica.
-  </p>
+  <p>Piezas seleccionadas. Lujo real. Presencia que no se explica.</p>
 
-  <div class="filters">
-    <div class="filter active">Todo</div>
-    <div class="filter">Relojes</div>
-    <div class="filter">Cadenas</div>
-    <div class="filter">Anillos</div>
-    <div class="filter">Guillos</div>
+  <!-- CATEGORÍAS -->
+  <div class="categories">
+    <div class="cat active" onclick="filterCat('all',this)">Todo</div>
+    <div class="cat" onclick="filterCat('reloj',this)">Relojes</div>
+    <div class="cat" onclick="filterCat('cadena',this)">Cadenas</div>
+    <div class="cat" onclick="filterCat('anillo',this)">Anillos</div>
+    <div class="cat" onclick="filterCat('grillz',this)">Grillz</div>
   </div>
 
-  <div class="grid">
-    <!-- Producto -->
-    <div class="card">
-      <img src="reloj1.jpg" alt="">
-      <div class="name">Reloj Signature</div>
-      <div class="price">$1,200</div>
+  <!-- GRID -->
+  <section class="grid">
+
+    <div class="card reloj" onclick="location.href='producto.html'">
+      <h3>Reloj Signature</h3>
+      <span>$1,200</span>
     </div>
 
-    <div class="card">
-      <img src="cadena1.jpg" alt="">
-      <div class="name">Cadena Iced Cuban</div>
-      <div class="price">$950</div>
+    <div class="card cadena">
+      <h3>Cadena Iced Cuban</h3>
+      <span>$950</span>
     </div>
 
-    <div class="card">
-      <img src="anillo1.jpg" alt="">
-      <div class="name">Anillo Moissanite</div>
-      <div class="price">$420</div>
+    <div class="card anillo">
+      <h3>Anillo Moissanite</h3>
+      <span>$420</span>
     </div>
 
-    <div class="card">
-      <img src="guillo1.jpg" alt="">
-      <div class="name">Guillo Diamond Cut</div>
-      <div class="price">$680</div>
+    <div class="card grillz">
+      <h3>Guillo Diamond Cut</h3>
+      <span>$680</span>
     </div>
-  </div>
+
+  </section>
 </main>
 
-<footer>
-  © Miranda Flow
-</footer>
+<script>
+function filterCat(cat,el){
+  document.querySelectorAll('.cat').forEach(c=>c.classList.remove('active'));
+  el.classList.add('active');
+
+  document.querySelectorAll('.card').forEach(card=>{
+    if(cat==='all'){card.classList.remove('hidden')}
+    else{
+      card.classList.toggle('hidden',!card.classList.contains(cat))
+    }
+  })
+}
+</script>
 
 </body>
 </html>
